deployment_postgrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  labels:
    app: postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
      - name: postgrest
        image: postgrest/postgrest
        ports:
          - containerPort: 3000
