deployment_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: asocpro/shell-tutor-ssh:0.11
        #imagePullPolicy: Never
        ports:
          - containerPort: 22
        volumeMounts:
          - mountPath: /opt/progress
            name: mount-storage-pvc
      - name: tail
        image: grafana/promtail
        args:
          - "-config.file=/etc/promtail/promtail.yaml"
        #imagePullPolicy: Never
        volumeMounts:
          - mountPath: /etc/promtail
            name: promtail-config
          - mountPath: /opt/progress
            name: mount-storage-pvc
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-cm
        - name: mount-storage-pvc
          persistentVolumeClaim:
            claimName: storage-pvc
