ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wettying
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: %%NAMESPACE%%.%%DOMAIN_NAME%%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wetty
            port:
              number: 3000
